# DiamondEngine

./: .gitignore  .gitmodules  CMakeLists.txt  README.md
config/: engineConfig.xml
include/: AlignedAllocator.hpp  Behaviour.h  Camera.h  Component.h  ComponentBuilder.h  ComponentConfig.h  ComponentConfigParser.h  ComponentType.h  File.h  GameObject.h  GameObjectBuilder.h  GameObjectConfig.h  GameObjectConfigParser.h  GameObjectCreator.h  GameObjectDesigner.h  GraphicsContext.h  LogManager.h  Logger.h  Material.h  Mesh.h  MeshRenderer.h  MeshRendererBuilder.h  MeshRendererConfig.h  MeshRendererConfigParser.h  MeshType.h  RenderSequence.h  RenderableObject.h  RotateBehaviour.h  RotateBehaviourBuilder.h  RotateBehaviourConfig.h  Scene.h  SceneConfig.h  SceneConfigParser.h  Shader.h  ShaderMetadataParser.h  ShaderProgram.h  SharedMeshStore.h  SharedShaderStore.h  SpriteBuilder.h  Transform.h  (+2 more)
lib/audio/: CMakeLists.txt
lib/audio/include/audio/: AudioDevice.h  AudioEngine.h  AudioLoader.h
lib/audio/src/audio/: AudioDevice.cpp  AudioEngine.cpp  AudioLoader.cpp
lib/config/: CMakeLists.txt
lib/config/include/config/: Collider2DComponentConfig.h  ControllerConfig.h  EngineConfig.h  FrameConfig.h  GameInstanceConfig.h  GameSceneConfig.h  KeyboardConfig.h  RenderComponentConfig.h  SoundConfig.h  SpriteAnimationPlayerConfig.h  SpriteSheetConfig.h  TransformComponentConfig.h  WindowConfig.h
lib/config/include/parser/: AnimationParser.h  ControllerConfigParser.h  EngineConfigParser.h  FrameConfigParser.h  GameSceneConfigParser.h  KeyboardConfigParser.h  ShaderConfigParser.h  ShaderMetadataParser.h  SoundConfigParser.h  SpriteAnimationParser.h  SpriteAnimationPlayerConfigParser.h  SpriteSheetConfigParser.h  TextureMetadataParser.h  Vector4Parser.h  WindowConfigParser.h
lib/config/src/config/: Collider2DComponentConfig.cpp  ControllerConfig.cpp  EngineConfig.cpp  GameInstanceConfig.cpp  GameSceneConfig.cpp  MaterialComponentConfig.cpp  SpriteAnimationPlayerConfig.cpp  TransformComponentConfig.cpp
lib/config/src/parser/: AnimationParser.cpp  ComponentConfigParser.cpp  EngineConfigParser.cpp  FrameConfigParser.cpp  GameInstanceConfigParser.cpp  GameSceneConfigParser.cpp  KeyboardConfigParser.cpp  ShaderConfigParser.cpp  ShaderMetadataParser.cpp  SoundConfigParser.cpp  SpriteSheetConfigParser.cpp  TextureMetadataParser.cpp  Vector2Parser.cpp  Vector3Parser.cpp  Vector4Parser.cpp  WindowConfigParser.cpp
lib/debug/: CMakeLists.txt
lib/debug/include/debug/: DebugEvent.h  DebugEventHandler.h  Debugger.h
lib/debug/include/event/: GLAllocationEvent.h  GLMemoryRequest.h  LevelLoad.h  SpriteAnimationPlay.h
lib/debug/include/handler/: GLAllocationEventHandler.h  GLMemoryRequestHandler.h  LevelLoadHandler.h  SpriteAnimationPlayHandler.h
lib/debug/src/debug/: Debugger.cpp
lib/debug/src/event/: GLAllocationEvent.cpp  GLMemoryRequest.cpp  LevelLoad.cpp  SpriteAnimationPlay.cpp
lib/debug/src/handler/: GLAllocationEventHandler.cpp  GLMemoryRequestHandler.cpp  LevelLoadHandler.cpp  SpriteAnimationPlayHandler.cpp
lib/font/: CMakeLists.txt
lib/font/include/component/: FontRenderComponent.h
lib/font/include/font/: Font.h  FontEngine.h  FontLibrary.h
lib/font/include/window/: TextWindow.h
lib/font/src/component/: FontRenderComponent.cpp
lib/font/src/font/: FontEngine.cpp  FontLibrary.cpp
lib/font/src/window/: TextWindow.cpp
lib/game/: CMakeLists.txt
lib/game/include/animation/: FrameType.h  SpriteAnimation.h  SpriteAnimationFrame.h  SpriteSheet.h  SpriteSheetLoader.h
lib/game/include/component/: AnimationPlayer.h  BehaviourComponent.h  Collider2DComponent.h  ComponentBuilder.h  ComponentFactory.h  SpriteAnimationPlayer.h
lib/game/include/game/: GameInstance.h  GameInstanceBuilder.h  GameInstanceManager.h  LevelLoader.h
lib/game/include/physics/: ColliderIgnoreFlags.h  ColliderType.h  CollisionResolver2D.h  CollisionSolver2D.h
lib/game/src/animation/: SpriteSheetLoader.cpp
lib/game/src/component/: AnimationPlayer.cpp  Collider2DComponent.cpp  ComponentBuilder.cpp  ComponentFactory.cpp  SpriteAnimationPlayer.cpp
lib/game/src/game/: GameInstance.cpp  GameInstanceBuilder.cpp  GameInstanceManager.cpp  LevelLoader.cpp
lib/game/src/physics/: CollisionResolver2D.cpp  CollisionSolver2D.cpp
lib/graphics/: CMakeLists.txt
lib/graphics/include/allocator/: GLAllocator.h  MemoryPoolAllocator.hpp
lib/graphics/include/component/: IRenderComponent.h  MaterialRenderComponent.h  RenderComponentBuilder.h  TransformRenderComponent.h
lib/graphics/include/graphics/: DrawCall.h  RenderDescriptor.h  RenderDrawCall.h  Renderer.h  RenderingSubsystem.h  UniformBufferAgent.h  UniformDescriptor.h  UniformMemory.hpp  VertexState.h
lib/graphics/include/mesh/: MeshData.h  MeshType.h  SharedMeshStore.h
lib/graphics/include/rendering/: Camera.h  RenderMaterial.h  RenderUploadType.h  Renderer.h  Transform.h  VertexAttribute.h
lib/graphics/include/shader/: Shader.h
lib/graphics/include/texture/: TextureLoader.h
lib/graphics/src/allocator/: GLAllocator.cpp
lib/graphics/src/component/: MaterialRenderComponent.cpp  RenderComponentBuilder.cpp  TransformRenderComponent.cpp
lib/graphics/src/graphics/: Renderer.cpp  RenderingSubsystem.cpp  UniformBufferAgent.cpp
lib/graphics/src/mesh/: Mesh.cpp  SharedMeshStore.cpp
lib/graphics/src/rendering/: Camera.cpp  RenderUploadObject.cpp
lib/graphics/src/shader/: Shader.cpp  ShaderProgram.cpp  SharedShaderStore.cpp
lib/input/: CMakeLists.txt
lib/input/include/input/: Input.h  Key.h  Keyboard.h
lib/input/src/input/: Input.cpp  Keyboard.cpp  XInputController.cpp
scenes/: sample_scene.xml
shaders/: vertex_colored.shader
src/: Camera.cpp  DiamondEngine.cpp  File.cpp  GameObject.cpp  GameObjectBuilder.cpp  GameObjectConfig.cpp  GameObjectConfigParser.cpp  GameObjectCreator.cpp  GameObjectDesigner.cpp  GraphicsContext.cpp  LogManager.cpp  Material.cpp  Mesh.cpp  MeshRenderer.cpp  MeshRendererBuilder.cpp  MeshRendererConfig.cpp  MeshRendererConfigParser.cpp  RenderSequence.cpp  RotateBehaviour.cpp  RotateBehaviourConfigParser.cpp  (+12 more)
(+245 files in other folders)
